--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2024"
 anyhow = "1.0.68"
 clap =  {  version = "4.5.49", features = ["derive"] }
 flate2 = { version = "1.0.34", features = ["zlib-rs"] }
+sha1 = "0.10.6"
+hex = "0.4.3"
+tempfile = "3.23.0"
